exports[`test should render SingleSelectableRows tag 1`] = `
<TableRows>
  <TableRow
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    tabIndex="0">
    <TableRowContent
      content="Table Data" />
    <TableRowContent
      content="Table Data" />
    <TableRowContent
      content="Table Data" />
  </TableRow>
  <TableRow
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    tabIndex="0">
    <TableRowContent
      content="Table Data" />
    <TableRowContent
      content="Table Data" />
    <TableRowContent
      content="Table Data" />
  </TableRow>
</TableRows>
`;

exports[`test should render SingleSelectableRows with maximum height set 1`] = `
<TableRows
  height="medium">
  <TableRow
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    tabIndex="0">
    <TableRowContent
      content="Table Data" />
    <TableRowContent
      content="Table Data" />
    <TableRowContent
      content="Table Data" />
  </TableRow>
  <TableRow
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    tabIndex="0">
    <TableRowContent
      content="Table Data" />
    <TableRowContent
      content="Table Data" />
    <TableRowContent
      content="Table Data" />
  </TableRow>
</TableRows>
`;
